Added thumbnails for two main side projects, as well as descriptions etc.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">A Warm Welcome!</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-      <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+      <h1 class="h3">4th Year Computer Science | McMaster University | Software Developer</h1>
+      <p class="lead"> A developer with a strong understanding of the ways that software can be leveraged to enhance business practices and user experiences. 
+      A strong communicator with the ability to collaborate with multiple departments in an effort to understand the needs of the business and develop customized solutions. 
+      A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
     </header>
 
     <!-- Page Features -->
@@ -60,10 +61,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="projectPhotos/CarAI/pic1.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Self Driving Car</h4>
+            <p class="card-text">Using Python, created a smart self driving car simulation that uses collision detection and sensors to avoid obstacles on a racetrack.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -73,10 +74,11 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="projectPhotos/TagAlong/layout.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">Tag Along</h4>
+            <p class="card-text">An immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
