--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; kaelbosland.com 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
     </div>
     <!-- /.container -->
   </footer>
