--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <img class="card-img-top" src="projectPhotos/CarAI/pic1.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Self Driving Car</h4>
-            <p class="card-text">Using Python, created a smart self driving car simulation that uses collision detection and sensors to avoid obstacles on a racetrack.</p>
+            <p class="card-text">Using Python, created a smart self driving car simulation that uses a made from scratch collision detection and sensor system to avoid obstacles on a racetrack.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -77,7 +77,7 @@
           <img class="card-img-top" src="projectPhotos/TagAlong/layout.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Tag Along</h4>
-            <p class="card-text">An immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
+            <p class="card-text">Using Google AR Core and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
             </p>
           </div>
           <div class="card-footer">
@@ -91,7 +91,7 @@
           <img class="card-img-top" src="projectPhotos/Mosaic/thumbnail.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Mosaic</h4>
-            <p class="card-text">Using C# and SQL Server, created an MVC web application that simulated a university management environment.</p>
+            <p class="card-text">Using Visual Studio, C# and SQL Server, created an MVC web application that simulated a university management environment.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -121,7 +121,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; kaelbosland.com 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
     </div>
     <!-- /.container -->
   </footer>
