Added fourth project and description, Hue Sync

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <img class="card-img-top" src="projectPhotos/TagAlong/layout.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Tag Along</h4>
-            <p class="card-text">Using Google AR Core and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
+            <p class="card-text">Using Google AR Core, Google Cloud SQL and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
             </p>
           </div>
           <div class="card-footer">
@@ -91,7 +91,7 @@
           <img class="card-img-top" src="projectPhotos/Mosaic/thumbnail.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Mosaic</h4>
-            <p class="card-text">Using Visual Studio, C# and SQL Server, created an MVC web application that simulated a university management environment.</p>
+            <p class="card-text">Using Visual Studio, C# and SQL Server, created an MVC web application that simulates a university management environment.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -101,10 +101,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="projectPhotos/Hue/thumbnail.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">Hue Sync</h4>
+            <p class="card-text">Using python and my own wrapper for the Hue RESTful API, created an application to interact with Phillips Hue lights, and have them pulse in sync to the song that is playing.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -122,6 +122,7 @@
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
+      <p class="m-0 text-center text-white">This site is currently under construction!</p>
     </div>
     <!-- /.container -->
   </footer>
