--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<style>
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+</style>
+
 <head>
 
   <meta charset="utf-8">
@@ -17,7 +27,6 @@
   <link href="css/heroic-features.css" rel="stylesheet">
 
 </head>
-
 <body>
 
   <!-- Navigation -->
@@ -46,8 +55,22 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div style="text-align: center">
+    <img src="cv/resume.png" width="60%"/>
+  </div>
 
+  <div style="text-align: center">
+    
+  </div>
+
+  <div style="text-align: center">
+      <a  href="cv/resume.pdf" target="_blank"> 
+        <img src="cv/pdf.png" width="3%" />
+      </a>
+  </div>
+
+  <div style="text-align: center">
+      <a class=".btn-link" href="cv/resume.pdf" target="_blank"> Download Resume </a>
   </div>
   <!-- /.container -->
 
