--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
 
