--- a/cv.html
+++ b/cv.html
@@ -38,7 +38,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
@@ -47,6 +47,9 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+          <li class="nav-item active">
             <a class="nav-link" href="cv.html">CV</a>
           </li>
         </ul>
