--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+          <li class="nav-item">
             <a class="nav-link" href="cv.html">CV</a>
           </li>
+
         </ul>
       </div>
     </div>
