--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Kael Bosland | Software Developer</title>
+  <title>Kael Bosland</title>
+  <link rel="shortcut icon" href="projectPhotos/Icon/icon.png" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
