--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Kael Bosland | Software Developer</title>
+  <title>Kael Bosland</title>
+  <link rel="shortcut icon" href="projectPhotos/Icon/icon.png" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
 
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
