--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="card-text">Using Python, created a smart self driving car simulation that uses a made from scratch collision detection and sensor system to avoid obstacles on a racetrack.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="car.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
             </p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="tagalong.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
             <p class="card-text">Using Visual Studio, C# and SQL Server, created an MVC web application that simulates a university management environment.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="mosaic.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
             <p class="card-text">Using python and my own wrapper for the Hue RESTful API, created an application to interact with Phillips Hue lights, and have them pulse in sync to the song that is playing.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="hue.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
