--- a/car.html
+++ b/car.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">Kael Bosland</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,12 +57,23 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  <footer class="py-5 bg-light">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
+        <p class="m-0 text-center text-white">This site is currently under construction!</p>
+      </div>
+      <div class="container" style="margin-top:2%">
+        <table style="margin:auto; text-align:center;">
+            <tr> 
+              <td style="padding:5px;"> <a> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/gmail.jpg"> </a> </td>
+              <td style="padding:5px;"> <a target="_blank" href="https://www.github.com/kbosland/"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/github.jpg"> </a> </td>
+              <td style="padding:5px;"> <a target="_blank" href="https://www.linkedin.com/in/kael-bosland"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/linkedin.jpg"> </a> </td>
+              <td style="padding:5px;"> <a target="_blank" href="https://devpost.com/kaelbosland10"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/devpost.png"> </a> </td>
+            </tr>
+        </table>
+      </div>
+      <!-- /.container -->
+    </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
