--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <div class="container" style="margin-top:2%">
       <table style="margin:auto; text-align:center;">
           <tr> 
-            <td style="padding:5px;"> <a> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/gmail.jpg"> </a> </td>
+            <td style="padding:5px;"> <a href="mailto:kael.bosland10@gmail.com"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/gmail.jpg"> </a> </td>
             <td style="padding:5px;"> <a target="_blank" href="https://www.github.com/kbosland/"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/github.jpg"> </a> </td>
             <td style="padding:5px;"> <a target="_blank" href="https://www.linkedin.com/in/kael-bosland"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/linkedin.jpg"> </a> </td>
             <td style="padding:5px;"> <a target="_blank" href="https://devpost.com/kaelbosland10"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/devpost.png"> </a> </td>
