Added CAR AI details page, not completed yet.

--- a/cv.html
+++ b/cv.html
@@ -85,7 +85,7 @@
         <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
         <p class="m-0 text-center text-white">This site is currently under construction!</p>
       </div>
-      <div class="container" style="margin-top:2%">
+      <div class="container">
         <table style="margin:auto; text-align:center;">
             <tr> 
               <td style="padding:5px;"> <a href="mailto:kael.bosland10@gmail.com"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/gmail.jpg"> </a> </td>
