Changed project layout on home screen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
-
+  <link href="css/responsive.css" rel="stylesheet">
 </head>
 
 <body>
@@ -73,9 +73,76 @@
       A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
     </header>
 
-    <!-- Page Features -->
-    <div class="row text-center">
+    <div class="container">
+        <div class="grid-row">
+          <div class="grid-item">
+            <a class="wrapping-link" href="car.html"></a>
+            <div class="grid-item-wrapper">
+              <div class="grid-item-container">
+                <div class="grid-image-top car">
+                  <span class="centered project-image-bg car-image"></span>
+                </div>
+                <div class="grid-item-content">
+                  <span class="item-title">Self Driving Car</span>
+                  <span class="item-category">Python</span>
+                  <span class="item-excerpt">Created a smart self driving car simulation that uses a made from scratch collision detection and sensor system to avoid obstacles on a racetrack.</span>
+                  <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+              <a class="wrapping-link" href="mosaic.html"></a>
+              <div class="grid-item-wrapper">
+                <div class="grid-item-container">
+                  <div class="grid-image-top mosaic">
+                    <span class="centered project-image-bg mosaic-image"></span>
+                  </div>
+                  <div class="grid-item-content">
+                    <span class="item-title">Mosaic</span>
+                    <span class="item-category">C#, XAML, SQL</span>
+                    <span class="item-excerpt">Using Visual Studio, C# and SQL Server, created an MVC web application that simulates a university management environment.</span>
+                    <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="grid-item">
+                <a class="wrapping-link" href="tagalong.html"></a>
+                <div class="grid-item-wrapper">
+                  <div class="grid-item-container">
+                    <div class="grid-image-top tagalong">
+                      <span class="centered project-image-bg tagalong-image" style="width:90%; height:85%;"></span>
+                    </div>
+                    <div class="grid-item-content">
+                      <span class="item-title">Tag Along</span>
+                      <span class="item-category">C#, Cloud SQL, Google AR Core</span>
+                      <span class="item-excerpt">Using Google AR Core, Google Cloud SQL and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.</span>
+                      <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="grid-item">
+                  <a class="wrapping-link" href="hue.html"></a>
+                  <div class="grid-item-wrapper">
+                    <div class="grid-item-container">
+                      <div class="grid-image-top hue">
+                        <span class="centered project-image-bg hue-image"></span>
+                      </div>
+                      <div class="grid-item-content">
+                        <span class="item-title">Hue Sync</span>
+                        <span class="item-category">Python, Hue Web API</span>
+                        <span class="item-excerpt">Using python and my own wrapper for the Hue RESTful API, created an application to interact with Phillips Hue lights, and have them pulse in sync to the song that is playing.</span>
+                        <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          </div>
+    </div>
 
+    <!--  
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
           <img class="card-img-top" src="projectPhotos/CarAI/pic1.png" alt="">
@@ -94,7 +161,7 @@
           <img class="card-img-top" src="projectPhotos/TagAlong/layout.png" alt="">
           <div class="card-body">
             <h4 class="card-title">Tag Along</h4>
-            <p class="card-text">Using Google AR Core, Google Cloud SQL and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.
+            <p class="card-text"> 
             </p>
           </div>
           <div class="card-footer">
@@ -130,7 +197,7 @@
       </div>
 
     </div>
-    <!-- /.row -->
+  -->
 
   </div>
   <!-- /.container -->
