Created hye sync logo, set up a few more things

--- a/about.html
+++ b/about.html
@@ -52,7 +52,13 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+      <h1 class="h3">4th Year Computer Science | McMaster University | Software Developer</h1>
+      <p class="lead"> A developer with a strong understanding of the ways that software can be leveraged to enhance business practices and user experiences. 
+      A strong communicator with the ability to collaborate with multiple departments in an effort to understand the needs of the business and develop customized solutions. 
+      A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
+    </header>
   </div>
   <!-- /.container -->
 
