--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
   <!-- Page Content -->
   <div class="container">
 
-    <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="h3">4th Year Computer Science | McMaster University | Software Developer</h1>
-      <p class="lead"> A developer with a strong understanding of the ways that software can be leveraged to enhance business practices and user experiences. 
-      A strong communicator with the ability to collaborate with multiple departments in an effort to understand the needs of the business and develop customized solutions. 
-      A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
+      
     </header>
 
-    <div class="container">
+    <div class="container" style="margin:0 auto;">
         <div class="grid-row">
           <div class="grid-item">
             <a class="wrapping-link" href="car.html"></a>
@@ -86,7 +82,6 @@
                   <span class="item-title">Self Driving Car</span>
                   <span class="item-category">Python</span>
                   <span class="item-excerpt">Created a smart self driving car simulation that uses a made from scratch collision detection and sensor system to avoid obstacles on a racetrack.</span>
-                  <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
                 </div>
               </div>
             </div>
@@ -100,9 +95,8 @@
                   </div>
                   <div class="grid-item-content">
                     <span class="item-title">Mosaic</span>
-                    <span class="item-category">C#, XAML, SQL</span>
+                    <span class="item-category">C#, HTML5, JavaScript, SQL</span>
                     <span class="item-excerpt">Using Visual Studio, C# and SQL Server, created an MVC web application that simulates a university management environment.</span>
-                    <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
                   </div>
                 </div>
               </div>
@@ -118,7 +112,6 @@
                       <span class="item-title">Tag Along</span>
                       <span class="item-category">C#, Cloud SQL, Google AR Core</span>
                       <span class="item-excerpt">Using Google AR Core, Google Cloud SQL and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.</span>
-                      <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
                     </div>
                   </div>
                 </div>
@@ -134,7 +127,6 @@
                         <span class="item-title">Hue Sync</span>
                         <span class="item-category">Python, Hue Web API</span>
                         <span class="item-excerpt">Using python and my own wrapper for the Hue RESTful API, created an application to interact with Phillips Hue lights, and have them pulse in sync to the song that is playing.</span>
-                        <span class="more-info">View Project <i class="fas fa-long-arrow-alt-right"></i></span>
                       </div>
                     </div>
                   </div>
