--- a/mosaic.html
+++ b/mosaic.html
@@ -52,7 +52,10 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    <header class="jumbotron my-4" style="text-align:center;">
+      <h1 class="h3">Mosaic</h1>
+      <p class="lead"> Made with C#, HTML5, JavaScript and SQL </p>
+    </header>
   </div>
   <!-- /.container -->
 
