--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/responsive.css" rel="stylesheet">
 
 </head>
 
@@ -53,6 +54,77 @@
   <!-- Page Content -->
   <div class="container">
 
+     <header class="jumbotron my-4">
+      <h1 class="h3">4th Year Computer Science | McMaster University | Software Developer</h1>
+      <p class="lead"> A developer with a strong understanding of the ways that software can be leveraged to enhance business practices and user experiences. 
+      A strong communicator with the ability to collaborate with multiple departments in an effort to understand the needs of the business and develop customized solutions. 
+      A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
+    </header>
+    
+        <div class="container" style="margin:0 auto;">
+            <div class="grid-row">
+              <div class="grid-item">
+                <a class="wrapping-link" href="car.html"></a>
+                <div class="grid-item-wrapper">
+                  <div class="grid-item-container">
+                    <div class="grid-image-top car">
+                      <span class="centered project-image-bg car-image"></span>
+                    </div>
+                    <div class="grid-item-content">
+                      <span class="item-title">Self Driving Car</span>
+                      <span class="item-category">Python</span>
+                      <span class="item-excerpt">Created a smart self driving car simulation that uses a made from scratch collision detection and sensor system to avoid obstacles on a racetrack.</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="grid-item">
+                  <a class="wrapping-link" href="mosaic.html"></a>
+                  <div class="grid-item-wrapper">
+                    <div class="grid-item-container">
+                      <div class="grid-image-top mosaic">
+                        <span class="centered project-image-bg mosaic-image"></span>
+                      </div>
+                      <div class="grid-item-content">
+                        <span class="item-title">Mosaic</span>
+                        <span class="item-category">C#, XAML, SQL</span>
+                        <span class="item-excerpt">Using Visual Studio, C# and SQL Server, created an MVC web application that simulates a university management environment.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-item">
+                    <a class="wrapping-link" href="tagalong.html"></a>
+                    <div class="grid-item-wrapper">
+                      <div class="grid-item-container">
+                        <div class="grid-image-top tagalong">
+                          <span class="centered project-image-bg tagalong-image" style="width:90%; height:85%;"></span>
+                        </div>
+                        <div class="grid-item-content">
+                          <span class="item-title">Tag Along</span>
+                          <span class="item-category">C#, Cloud SQL, Google AR Core</span>
+                          <span class="item-excerpt">Using Google AR Core, Google Cloud SQL and Unity, created an immersive social engagement tool that fosters close-knit connections with like-minded individuals to stop social isolation in its tracks.</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="grid-item">
+                      <a class="wrapping-link" href="hue.html"></a>
+                      <div class="grid-item-wrapper">
+                        <div class="grid-item-container">
+                          <div class="grid-image-top hue">
+                            <span class="centered project-image-bg hue-image"></span>
+                          </div>
+                          <div class="grid-item-content">
+                            <span class="item-title">Hue Sync</span>
+                            <span class="item-category">Python, Hue Web API</span>
+                            <span class="item-excerpt">Using python and my own wrapper for the Hue RESTful API, created an application to interact with Phillips Hue lights, and have them pulse in sync to the song that is playing.</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+        </div>
   </div>
   <!-- /.container -->
 
