--- a/hue.html
+++ b/hue.html
@@ -52,7 +52,10 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    <header class="jumbotron my-4" style="text-align:center;">
+      <h1 class="h3">HueSync</h1>
+      <p class="lead"> Made with Python </p>
+    </header>
   </div>
   <!-- /.container -->
 
