--- a/tagalong.html
+++ b/tagalong.html
@@ -52,7 +52,10 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    <header class="jumbotron my-4" style="text-align:center;">
+      <h1 class="h3">Tag Along</h1>
+      <p class="lead"> Made with Unity, Google AR Core and Cloud SQL </p>
+    </header>
   </div>
   <!-- /.container -->
 
