Changed description on projects page

--- a/cv.html
+++ b/cv.html
@@ -68,14 +68,10 @@
     
   </div>
 
-  <div style="text-align: center">
+  <div style="text-align: center; padding-bottom: 15px;">
       <a  href="cv/resume.pdf" target="_blank"> 
-        <img src="cv/pdf.png" width="3%" />
+        <img src="projectPhotos/bottombar/pdf.png" width="3%" />
       </a>
-  </div>
-
-  <div style="text-align: center">
-      <a class=".btn-link" href="cv/resume.pdf" target="_blank"> Download Resume </a>
   </div>
   <!-- /.container -->
 
