--- a/projects.html
+++ b/projects.html
@@ -55,10 +55,8 @@
   <div class="container">
 
      <header class="jumbotron my-4">
-      <h1 class="h3">4th Year Computer Science | McMaster University | Software Developer</h1>
-      <p class="lead"> A developer with a strong understanding of the ways that software can be leveraged to enhance business practices and user experiences. 
-      A strong communicator with the ability to collaborate with multiple departments in an effort to understand the needs of the business and develop customized solutions. 
-      A self-starter with a strong focus in working independently to seek out creative ways to solve complex software problems. </p>
+      <h1 class="h3">My Projects</h1>
+      <p class="lead"> Here is a list of my side projects, made through either an individual side project, a collaborative project or a hack-a-thon! </p>
     </header>
     
         <div class="container" style="margin:0 auto;">
