Added mosaic page content, first draft

--- a/car.html
+++ b/car.html
@@ -63,6 +63,7 @@
     
           <table style="margin:auto; text-align: center;">
             <tr>
+              <td > <a class="nav-link" href="javascript:void(0);" onclick="goToByScroll('intro')"> Intro </a> </td>
               <td > <a class="nav-link" href="javascript:void(0);" onclick="goToByScroll('collisions')"> Collisions </a> </td>
               <td > <a class="nav-link" href="javascript:void(0);" onclick="goToByScroll('sensors')" > Sensors </a> </td>
               <td > <a class="nav-link" href="javascript:void(0);" onclick="goToByScroll('ai')"> AI </a> </td>
@@ -72,6 +73,16 @@
         </header>
       </div>
   <!-- /.container -->
+
+  <a class="anchor" id="intro"></a>
+  <div class="container">
+    <h1 class="h3"> Introduction </h1>
+    <p class="lead">
+      --Add description here--
+    </p>
+  </div>
+  <br/>
+  <br/>
 
   <a class="anchor" id="collisions"></a>
   <div class="container" style="padding-bottom:10px;">
