--- a/hue.html
+++ b/hue.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 
 <head>
 
+  <script>
+    function goToByScroll(id){
+      $('html,body').animate({scrollTop: $("#"+id).offset().top}, 'fast');
+    }
+  </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
