--- a/tagalong.html
+++ b/tagalong.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 
 <head>
+  <script>
+    function goToByScroll(id){
+      $('html,body').animate({scrollTop: $("#"+id).offset().top}, 'fast');
+    }
+  </script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
